// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownFiltered /> renders the Dropdown with options with no a11y violations 1`] = `
.c1 {
  margin: 0;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0D0A38;
  line-height: 1.6;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-weight: 600;
  font-size: 16px;
}

.c2 {
  display: block;
}

.c4 {
  border: 2px solid #DCDBE2;
  border-radius: 4px;
  padding: 0 10px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  margin: 4px 0 0;
}

.c4:focus {
  outline-width: 0;
  border: 2px solid #4A3EDE;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c4::-webkit-input-placeholder {
  color: #DCDBE2;
}

.c4:disabled {
  background-color: #EAEAEE;
}

.c7 {
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  -webkit-transform: rotate(downdeg);
  -ms-transform: rotate(downdeg);
  transform: rotate(downdeg);
}

.c0 {
  max-width: 100%;
  width: 100%;
}

.c5 {
  margin: 0;
  margin-bottom: 0;
}

.c3 {
  position: relative;
  margin: 5px 0;
}

.c6 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 12px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    role="combobox"
  >
    <label
      class="c1 c2"
      color="#0D0A38"
      for="text-id-test"
      id="downshift-0-label"
    >
      Label
    </label>
    <div
      class="c3"
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-0-label"
        autocomplete="off"
        class="c4 c5"
        id="text-id-test"
        name="test"
        value=""
      />
      <div
        class="c6"
      >
        <svg
          aria-label="open.menu"
          class="c7"
          direction="down"
          height="24px"
          viewBox="0 0 416 416"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M214.8 287c2.2-.9 4.3-2.3 6.1-4.1l124-124c7.2-7.1 7.2-18.7 0-25.9-7.1-7.2-18.7-7.2-25.9 0L207.9 244.1l-111-111c-7.1-7.2-18.7-7.2-25.9 0-7.2 7.1-7.2 18.7 0 25.9l124 124c5.4 5.3 13.2 6.7 19.8 4z"
            fill="#4A3EDE"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DropdownFiltered /> renders the DropdownFiltered with options and a default selected value 1`] = `
.c2 {
  border: 2px solid #DCDBE2;
  border-radius: 4px;
  padding: 0 10px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  margin: 4px 0 0;
}

.c2:focus {
  outline-width: 0;
  border: 2px solid #4A3EDE;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c2::-webkit-input-placeholder {
  color: #DCDBE2;
}

.c2:disabled {
  background-color: #EAEAEE;
}

.c5 {
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  -webkit-transform: rotate(downdeg);
  -ms-transform: rotate(downdeg);
  transform: rotate(downdeg);
}

.c0 {
  max-width: 100%;
  width: 100%;
}

.c3 {
  margin: 0;
  margin-bottom: 0;
}

.c1 {
  position: relative;
  margin: 5px 0;
}

.c4 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 12px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    role="combobox"
  >
    <div
      class="c1"
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-1-label"
        autocomplete="off"
        class="c2 c3"
        id="text-id-test"
        name="test"
        value="orange"
      />
      <div
        class="c4"
      >
        <svg
          aria-label="open.menu"
          class="c5"
          direction="down"
          height="24px"
          viewBox="0 0 416 416"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M214.8 287c2.2-.9 4.3-2.3 6.1-4.1l124-124c7.2-7.1 7.2-18.7 0-25.9-7.1-7.2-18.7-7.2-25.9 0L207.9 244.1l-111-111c-7.1-7.2-18.7-7.2-25.9 0-7.2 7.1-7.2 18.7 0 25.9l124 124c5.4 5.3 13.2 6.7 19.8 4z"
            fill="#4A3EDE"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
